--- a/test.html
+++ b/test.html
@@ -1,4 +1,5 @@
-
+<!DOCTYPE html>
+<html> 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
@@ -25,3 +26,4 @@
       <button
   class="custom-button">اظغط هنا لكي زينب تربح مليار</button>
 </body> 
+</html>
